// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden file — the real CSV, the seeded team, N=18 (init plan §7.8) > generateRoster output matches the committed snapshot > roster-assignments 1`] = `
[
  {
    "day": 1,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-01",
  },
  {
    "day": 3,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-01",
  },
  {
    "day": 5,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-01",
  },
  {
    "day": 7,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-01",
  },
  {
    "day": 1,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-02",
  },
  {
    "day": 3,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-02",
  },
  {
    "day": 6,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-02",
  },
  {
    "day": 7,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-02",
  },
  {
    "day": 1,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-03",
  },
  {
    "day": 3,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-03",
  },
  {
    "day": 4,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-03",
  },
  {
    "day": 6,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-03",
  },
  {
    "day": 1,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-04",
  },
  {
    "day": 4,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-04",
  },
  {
    "day": 6,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-04",
  },
  {
    "day": 1,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-05",
  },
  {
    "day": 4,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-05",
  },
  {
    "day": 6,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-05",
  },
  {
    "day": 2,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-06",
  },
  {
    "day": 4,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-06",
  },
  {
    "day": 6,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-06",
  },
  {
    "day": 2,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-07",
  },
  {
    "day": 4,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-07",
  },
  {
    "day": 7,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-07",
  },
  {
    "day": 2,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-08",
  },
  {
    "day": 5,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-08",
  },
  {
    "day": 7,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-08",
  },
  {
    "day": 2,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-09",
  },
  {
    "day": 5,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-09",
  },
  {
    "day": 6,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-09",
  },
  {
    "day": 2,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-10",
  },
  {
    "day": 5,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-10",
  },
  {
    "day": 6,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-10",
  },
  {
    "day": 3,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-11",
  },
  {
    "day": 5,
    "shiftId": "evening",
    "source": "AUTO",
    "staffId": "seed-11",
  },
  {
    "day": 5,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-11",
  },
  {
    "day": 3,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-12",
  },
  {
    "day": 7,
    "shiftId": "morning",
    "source": "AUTO",
    "staffId": "seed-12",
  },
]
`;

exports[`golden file — the real CSV, the seeded team, N=18 (init plan §7.8) > generateRoster output matches the committed snapshot > staff-diagnostics 1`] = `
[
  {
    "assignedHours": 32,
    "belowTarget": false,
    "maxWeeklyHours": 40,
    "staffId": "seed-01",
    "utilisation": 0.8,
  },
  {
    "assignedHours": 32,
    "belowTarget": false,
    "maxWeeklyHours": 40,
    "staffId": "seed-02",
    "utilisation": 0.8,
  },
  {
    "assignedHours": 32,
    "belowTarget": false,
    "maxWeeklyHours": 40,
    "staffId": "seed-03",
    "utilisation": 0.8,
  },
  {
    "assignedHours": 24,
    "belowTarget": false,
    "maxWeeklyHours": 32,
    "staffId": "seed-04",
    "utilisation": 0.75,
  },
  {
    "assignedHours": 24,
    "belowTarget": false,
    "maxWeeklyHours": 32,
    "staffId": "seed-05",
    "utilisation": 0.75,
  },
  {
    "assignedHours": 24,
    "belowTarget": false,
    "maxWeeklyHours": 32,
    "staffId": "seed-06",
    "utilisation": 0.75,
  },
  {
    "assignedHours": 24,
    "belowTarget": false,
    "maxWeeklyHours": 32,
    "staffId": "seed-07",
    "utilisation": 0.75,
  },
  {
    "assignedHours": 24,
    "belowTarget": false,
    "maxWeeklyHours": 32,
    "staffId": "seed-08",
    "utilisation": 0.75,
  },
  {
    "assignedHours": 24,
    "belowTarget": false,
    "maxWeeklyHours": 24,
    "staffId": "seed-09",
    "utilisation": 1,
  },
  {
    "assignedHours": 24,
    "belowTarget": false,
    "maxWeeklyHours": 24,
    "staffId": "seed-10",
    "utilisation": 1,
  },
  {
    "assignedHours": 24,
    "belowTarget": false,
    "maxWeeklyHours": 24,
    "staffId": "seed-11",
    "utilisation": 1,
  },
  {
    "assignedHours": 16,
    "belowTarget": false,
    "maxWeeklyHours": 16,
    "staffId": "seed-12",
    "utilisation": 1,
  },
]
`;

exports[`golden file — the real CSV, the seeded team, N=18 (init plan §7.8) > generateRoster output matches the committed snapshot > structural-verdict 1`] = `
{
  "contractedStaffHours": 368,
  "floorStaffHours": 272,
}
`;

exports[`golden file — the real CSV, the seeded team, N=18 (init plan §7.8) > summary week totals match the real dataset > summary-report 1`] = `
{
  "averageTransactionsPerStaffHour": 9.961309523809524,
  "cells": [
    {
      "day": 1,
      "hour": 7,
      "staffHours": 3,
      "transactions": 12,
      "transactionsPerStaffHour": 4,
    },
    {
      "day": 1,
      "hour": 8,
      "staffHours": 3,
      "transactions": 32,
      "transactionsPerStaffHour": 10.666666666666666,
    },
    {
      "day": 1,
      "hour": 9,
      "staffHours": 3,
      "transactions": 39,
      "transactionsPerStaffHour": 13,
    },
    {
      "day": 1,
      "hour": 10,
      "staffHours": 3,
      "transactions": 35,
      "transactionsPerStaffHour": 11.666666666666666,
    },
    {
      "day": 1,
      "hour": 11,
      "staffHours": 3,
      "transactions": 32,
      "transactionsPerStaffHour": 10.666666666666666,
    },
    {
      "day": 1,
      "hour": 12,
      "staffHours": 3,
      "transactions": 33,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 1,
      "hour": 13,
      "staffHours": 3,
      "transactions": 45,
      "transactionsPerStaffHour": 15,
    },
    {
      "day": 1,
      "hour": 14,
      "staffHours": 3,
      "transactions": 45,
      "transactionsPerStaffHour": 15,
    },
    {
      "day": 1,
      "hour": 15,
      "staffHours": 2,
      "transactions": 25,
      "transactionsPerStaffHour": 12.5,
    },
    {
      "day": 1,
      "hour": 16,
      "staffHours": 2,
      "transactions": 13,
      "transactionsPerStaffHour": 6.5,
    },
    {
      "day": 1,
      "hour": 17,
      "staffHours": 2,
      "transactions": 18,
      "transactionsPerStaffHour": 9,
    },
    {
      "day": 1,
      "hour": 18,
      "staffHours": 2,
      "transactions": 19,
      "transactionsPerStaffHour": 9.5,
    },
    {
      "day": 1,
      "hour": 19,
      "staffHours": 2,
      "transactions": 18,
      "transactionsPerStaffHour": 9,
    },
    {
      "day": 1,
      "hour": 20,
      "staffHours": 2,
      "transactions": 15,
      "transactionsPerStaffHour": 7.5,
    },
    {
      "day": 1,
      "hour": 21,
      "staffHours": 2,
      "transactions": 4,
      "transactionsPerStaffHour": 2,
    },
    {
      "day": 1,
      "hour": 22,
      "staffHours": 2,
      "transactions": 7,
      "transactionsPerStaffHour": 3.5,
    },
    {
      "day": 2,
      "hour": 7,
      "staffHours": 3,
      "transactions": 22,
      "transactionsPerStaffHour": 7.333333333333333,
    },
    {
      "day": 2,
      "hour": 8,
      "staffHours": 3,
      "transactions": 35,
      "transactionsPerStaffHour": 11.666666666666666,
    },
    {
      "day": 2,
      "hour": 9,
      "staffHours": 3,
      "transactions": 48,
      "transactionsPerStaffHour": 16,
    },
    {
      "day": 2,
      "hour": 10,
      "staffHours": 3,
      "transactions": 41,
      "transactionsPerStaffHour": 13.666666666666666,
    },
    {
      "day": 2,
      "hour": 11,
      "staffHours": 3,
      "transactions": 30,
      "transactionsPerStaffHour": 10,
    },
    {
      "day": 2,
      "hour": 12,
      "staffHours": 3,
      "transactions": 52,
      "transactionsPerStaffHour": 17.333333333333332,
    },
    {
      "day": 2,
      "hour": 13,
      "staffHours": 3,
      "transactions": 48,
      "transactionsPerStaffHour": 16,
    },
    {
      "day": 2,
      "hour": 14,
      "staffHours": 3,
      "transactions": 33,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 2,
      "hour": 15,
      "staffHours": 2,
      "transactions": 22,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 2,
      "hour": 16,
      "staffHours": 2,
      "transactions": 14,
      "transactionsPerStaffHour": 7,
    },
    {
      "day": 2,
      "hour": 17,
      "staffHours": 2,
      "transactions": 22,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 2,
      "hour": 18,
      "staffHours": 2,
      "transactions": 24,
      "transactionsPerStaffHour": 12,
    },
    {
      "day": 2,
      "hour": 19,
      "staffHours": 2,
      "transactions": 25,
      "transactionsPerStaffHour": 12.5,
    },
    {
      "day": 2,
      "hour": 20,
      "staffHours": 2,
      "transactions": 26,
      "transactionsPerStaffHour": 13,
    },
    {
      "day": 2,
      "hour": 21,
      "staffHours": 2,
      "transactions": 9,
      "transactionsPerStaffHour": 4.5,
    },
    {
      "day": 2,
      "hour": 22,
      "staffHours": 2,
      "transactions": 2,
      "transactionsPerStaffHour": 1,
    },
    {
      "day": 3,
      "hour": 7,
      "staffHours": 3,
      "transactions": 13,
      "transactionsPerStaffHour": 4.333333333333333,
    },
    {
      "day": 3,
      "hour": 8,
      "staffHours": 3,
      "transactions": 33,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 3,
      "hour": 9,
      "staffHours": 3,
      "transactions": 32,
      "transactionsPerStaffHour": 10.666666666666666,
    },
    {
      "day": 3,
      "hour": 10,
      "staffHours": 3,
      "transactions": 28,
      "transactionsPerStaffHour": 9.333333333333334,
    },
    {
      "day": 3,
      "hour": 11,
      "staffHours": 3,
      "transactions": 33,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 3,
      "hour": 12,
      "staffHours": 3,
      "transactions": 33,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 3,
      "hour": 13,
      "staffHours": 3,
      "transactions": 45,
      "transactionsPerStaffHour": 15,
    },
    {
      "day": 3,
      "hour": 14,
      "staffHours": 3,
      "transactions": 31,
      "transactionsPerStaffHour": 10.333333333333334,
    },
    {
      "day": 3,
      "hour": 15,
      "staffHours": 2,
      "transactions": 25,
      "transactionsPerStaffHour": 12.5,
    },
    {
      "day": 3,
      "hour": 16,
      "staffHours": 2,
      "transactions": 14,
      "transactionsPerStaffHour": 7,
    },
    {
      "day": 3,
      "hour": 17,
      "staffHours": 2,
      "transactions": 34,
      "transactionsPerStaffHour": 17,
    },
    {
      "day": 3,
      "hour": 18,
      "staffHours": 2,
      "transactions": 19,
      "transactionsPerStaffHour": 9.5,
    },
    {
      "day": 3,
      "hour": 19,
      "staffHours": 2,
      "transactions": 22,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 3,
      "hour": 20,
      "staffHours": 2,
      "transactions": 15,
      "transactionsPerStaffHour": 7.5,
    },
    {
      "day": 3,
      "hour": 21,
      "staffHours": 2,
      "transactions": 10,
      "transactionsPerStaffHour": 5,
    },
    {
      "day": 3,
      "hour": 22,
      "staffHours": 2,
      "transactions": 6,
      "transactionsPerStaffHour": 3,
    },
    {
      "day": 4,
      "hour": 7,
      "staffHours": 3,
      "transactions": 16,
      "transactionsPerStaffHour": 5.333333333333333,
    },
    {
      "day": 4,
      "hour": 8,
      "staffHours": 3,
      "transactions": 45,
      "transactionsPerStaffHour": 15,
    },
    {
      "day": 4,
      "hour": 9,
      "staffHours": 3,
      "transactions": 49,
      "transactionsPerStaffHour": 16.333333333333332,
    },
    {
      "day": 4,
      "hour": 10,
      "staffHours": 3,
      "transactions": 41,
      "transactionsPerStaffHour": 13.666666666666666,
    },
    {
      "day": 4,
      "hour": 11,
      "staffHours": 3,
      "transactions": 40,
      "transactionsPerStaffHour": 13.333333333333334,
    },
    {
      "day": 4,
      "hour": 12,
      "staffHours": 3,
      "transactions": 40,
      "transactionsPerStaffHour": 13.333333333333334,
    },
    {
      "day": 4,
      "hour": 13,
      "staffHours": 3,
      "transactions": 45,
      "transactionsPerStaffHour": 15,
    },
    {
      "day": 4,
      "hour": 14,
      "staffHours": 3,
      "transactions": 34,
      "transactionsPerStaffHour": 11.333333333333334,
    },
    {
      "day": 4,
      "hour": 15,
      "staffHours": 2,
      "transactions": 23,
      "transactionsPerStaffHour": 11.5,
    },
    {
      "day": 4,
      "hour": 16,
      "staffHours": 2,
      "transactions": 14,
      "transactionsPerStaffHour": 7,
    },
    {
      "day": 4,
      "hour": 17,
      "staffHours": 2,
      "transactions": 20,
      "transactionsPerStaffHour": 10,
    },
    {
      "day": 4,
      "hour": 18,
      "staffHours": 2,
      "transactions": 20,
      "transactionsPerStaffHour": 10,
    },
    {
      "day": 4,
      "hour": 19,
      "staffHours": 2,
      "transactions": 33,
      "transactionsPerStaffHour": 16.5,
    },
    {
      "day": 4,
      "hour": 20,
      "staffHours": 2,
      "transactions": 32,
      "transactionsPerStaffHour": 16,
    },
    {
      "day": 4,
      "hour": 21,
      "staffHours": 2,
      "transactions": 12,
      "transactionsPerStaffHour": 6,
    },
    {
      "day": 4,
      "hour": 22,
      "staffHours": 2,
      "transactions": 6,
      "transactionsPerStaffHour": 3,
    },
    {
      "day": 5,
      "hour": 7,
      "staffHours": 4,
      "transactions": 22,
      "transactionsPerStaffHour": 5.5,
    },
    {
      "day": 5,
      "hour": 8,
      "staffHours": 4,
      "transactions": 25,
      "transactionsPerStaffHour": 6.25,
    },
    {
      "day": 5,
      "hour": 9,
      "staffHours": 4,
      "transactions": 27,
      "transactionsPerStaffHour": 6.75,
    },
    {
      "day": 5,
      "hour": 10,
      "staffHours": 4,
      "transactions": 38,
      "transactionsPerStaffHour": 9.5,
    },
    {
      "day": 5,
      "hour": 11,
      "staffHours": 4,
      "transactions": 40,
      "transactionsPerStaffHour": 10,
    },
    {
      "day": 5,
      "hour": 12,
      "staffHours": 4,
      "transactions": 25,
      "transactionsPerStaffHour": 6.25,
    },
    {
      "day": 5,
      "hour": 13,
      "staffHours": 4,
      "transactions": 64,
      "transactionsPerStaffHour": 16,
    },
    {
      "day": 5,
      "hour": 14,
      "staffHours": 4,
      "transactions": 42,
      "transactionsPerStaffHour": 10.5,
    },
    {
      "day": 5,
      "hour": 15,
      "staffHours": 2,
      "transactions": 30,
      "transactionsPerStaffHour": 15,
    },
    {
      "day": 5,
      "hour": 16,
      "staffHours": 2,
      "transactions": 19,
      "transactionsPerStaffHour": 9.5,
    },
    {
      "day": 5,
      "hour": 17,
      "staffHours": 2,
      "transactions": 27,
      "transactionsPerStaffHour": 13.5,
    },
    {
      "day": 5,
      "hour": 18,
      "staffHours": 2,
      "transactions": 18,
      "transactionsPerStaffHour": 9,
    },
    {
      "day": 5,
      "hour": 19,
      "staffHours": 2,
      "transactions": 24,
      "transactionsPerStaffHour": 12,
    },
    {
      "day": 5,
      "hour": 20,
      "staffHours": 2,
      "transactions": 34,
      "transactionsPerStaffHour": 17,
    },
    {
      "day": 5,
      "hour": 21,
      "staffHours": 2,
      "transactions": 12,
      "transactionsPerStaffHour": 6,
    },
    {
      "day": 5,
      "hour": 22,
      "staffHours": 2,
      "transactions": 5,
      "transactionsPerStaffHour": 2.5,
    },
    {
      "day": 6,
      "hour": 7,
      "staffHours": 4,
      "transactions": 13,
      "transactionsPerStaffHour": 3.25,
    },
    {
      "day": 6,
      "hour": 8,
      "staffHours": 4,
      "transactions": 44,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 6,
      "hour": 9,
      "staffHours": 4,
      "transactions": 57,
      "transactionsPerStaffHour": 14.25,
    },
    {
      "day": 6,
      "hour": 10,
      "staffHours": 4,
      "transactions": 41,
      "transactionsPerStaffHour": 10.25,
    },
    {
      "day": 6,
      "hour": 11,
      "staffHours": 4,
      "transactions": 42,
      "transactionsPerStaffHour": 10.5,
    },
    {
      "day": 6,
      "hour": 12,
      "staffHours": 4,
      "transactions": 47,
      "transactionsPerStaffHour": 11.75,
    },
    {
      "day": 6,
      "hour": 13,
      "staffHours": 4,
      "transactions": 44,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 6,
      "hour": 14,
      "staffHours": 4,
      "transactions": 37,
      "transactionsPerStaffHour": 9.25,
    },
    {
      "day": 6,
      "hour": 15,
      "staffHours": 3,
      "transactions": 37,
      "transactionsPerStaffHour": 12.333333333333334,
    },
    {
      "day": 6,
      "hour": 16,
      "staffHours": 3,
      "transactions": 27,
      "transactionsPerStaffHour": 9,
    },
    {
      "day": 6,
      "hour": 17,
      "staffHours": 3,
      "transactions": 21,
      "transactionsPerStaffHour": 7,
    },
    {
      "day": 6,
      "hour": 18,
      "staffHours": 3,
      "transactions": 21,
      "transactionsPerStaffHour": 7,
    },
    {
      "day": 6,
      "hour": 19,
      "staffHours": 3,
      "transactions": 31,
      "transactionsPerStaffHour": 10.333333333333334,
    },
    {
      "day": 6,
      "hour": 20,
      "staffHours": 3,
      "transactions": 34,
      "transactionsPerStaffHour": 11.333333333333334,
    },
    {
      "day": 6,
      "hour": 21,
      "staffHours": 3,
      "transactions": 7,
      "transactionsPerStaffHour": 2.3333333333333335,
    },
    {
      "day": 6,
      "hour": 22,
      "staffHours": 3,
      "transactions": 5,
      "transactionsPerStaffHour": 1.6666666666666667,
    },
    {
      "day": 7,
      "hour": 7,
      "staffHours": 3,
      "transactions": 7,
      "transactionsPerStaffHour": 2.3333333333333335,
    },
    {
      "day": 7,
      "hour": 8,
      "staffHours": 3,
      "transactions": 32,
      "transactionsPerStaffHour": 10.666666666666666,
    },
    {
      "day": 7,
      "hour": 9,
      "staffHours": 3,
      "transactions": 41,
      "transactionsPerStaffHour": 13.666666666666666,
    },
    {
      "day": 7,
      "hour": 10,
      "staffHours": 3,
      "transactions": 42,
      "transactionsPerStaffHour": 14,
    },
    {
      "day": 7,
      "hour": 11,
      "staffHours": 3,
      "transactions": 37,
      "transactionsPerStaffHour": 12.333333333333334,
    },
    {
      "day": 7,
      "hour": 12,
      "staffHours": 3,
      "transactions": 30,
      "transactionsPerStaffHour": 10,
    },
    {
      "day": 7,
      "hour": 13,
      "staffHours": 3,
      "transactions": 38,
      "transactionsPerStaffHour": 12.666666666666666,
    },
    {
      "day": 7,
      "hour": 14,
      "staffHours": 3,
      "transactions": 18,
      "transactionsPerStaffHour": 6,
    },
    {
      "day": 7,
      "hour": 15,
      "staffHours": 2,
      "transactions": 22,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 7,
      "hour": 16,
      "staffHours": 2,
      "transactions": 28,
      "transactionsPerStaffHour": 14,
    },
    {
      "day": 7,
      "hour": 17,
      "staffHours": 2,
      "transactions": 19,
      "transactionsPerStaffHour": 9.5,
    },
    {
      "day": 7,
      "hour": 18,
      "staffHours": 2,
      "transactions": 16,
      "transactionsPerStaffHour": 8,
    },
    {
      "day": 7,
      "hour": 19,
      "staffHours": 2,
      "transactions": 22,
      "transactionsPerStaffHour": 11,
    },
    {
      "day": 7,
      "hour": 20,
      "staffHours": 2,
      "transactions": 24,
      "transactionsPerStaffHour": 12,
    },
    {
      "day": 7,
      "hour": 21,
      "staffHours": 2,
      "transactions": 8,
      "transactionsPerStaffHour": 4,
    },
    {
      "day": 7,
      "hour": 22,
      "staffHours": 2,
      "transactions": 6,
      "transactionsPerStaffHour": 3,
    },
  ],
  "totalStaffHours": 304,
  "totalTransactions": 3058,
  "transactionsPerStaffHourOverall": 10.05921052631579,
}
`;
